# iterator

./: CMakeLists.txt  README.md
include/iterator/: indexed_iterator.h  with_index.h
include/iterator/detail/: bind_proxy.h  indexed_iterator.h  mpl.h
include/iterator/mpl/: tools.h
include/iterator/recursive_unpack/: mpl.2.h  mpl.h  recursive_unpack.h  recursive_unpack_factory.h
test/: with_index_test.cpp
test/tools/: macro_helper.h
testing/: mpl.2_test.cpp  with_index_test.cpp
testing/tools/: macro_helper.h
